update welcomePage a bit

--- a/views/welcomePage.twig
+++ b/views/welcomePage.twig
@@ -16,12 +16,16 @@ This is currently an <strong>EXPERIMENTAL</strong> service!
 
     <p>
 IndieCert is a service to authenticate to services around the web without
-using usernames and passwords. IndieCert uses client certificates installed
+requiring usernames and passwords. IndieCert uses client certificates installed
 in the user's browser. Client certificates provide superior security. Until
 now it has been cumbersome to deploy client certificates outside managed
 corporate environments. This service improves on
 this by making it easier to deploy client certificates and support multiple
 (mobile) devices.
+    </p>
+    <p>
+IndieCert aims to be compatible with the (distributed)
+<a href="https://indieauth.com">IndieAuth</a> protocol.
     </p>
     <p class="info">
 For more information you are kindly invited to look at the technical
