--- a/views/welcomePage.twig
+++ b/views/welcomePage.twig
@@ -53,11 +53,11 @@ certificate and adding the fingerprint to your home page! Please enter a domain
 name or URL to a page you can modify. It <strong>MUST</strong> be reachable over HTTPS!
     </p>
 
-    <form method="get" action="auth">
-    <input type="hidden" name="redirect_uri" value="{{ redirect_uri|e }}">
-    <input type="text" name="me" id="me" placeholder="yourdomain.com">
-    <input type="submit" value="Sign In">
+    <form method="post" action="indieauth/auth">
+        <input type="text" name="me" id="me" placeholder="yourdomain.com">
+        <input type="submit" value="Sign In">
     </form>
+
     <p>
 You can check the <a href="faq">Frequently Asked Questions</a>.
     </p>
