require the "me" field on welcomePage, also change placeholder to example.org as the domain is reserved for this exact purpose

--- a/views/welcomePage.twig
+++ b/views/welcomePage.twig
@@ -54,7 +54,7 @@ name or URL to a page you can modify. It <strong>MUST</strong> be reachable over
     </p>
 
     <form method="post" action="indieauth/auth">
-        <input type="text" name="me" id="me" placeholder="yourdomain.com">
+        https://<input type="text" name="me" id="me" placeholder="example.org" required>
         <input type="submit" value="Sign In">
     </form>
 
