--- a/views/missingFingerprint.twig
+++ b/views/missingFingerprint.twig
@@ -16,7 +16,7 @@ IndieCert was unable to find a matching fingerprint on your claimed URL
     </p>
 
     <p class="warn">
-<strong>NOTE</strong>: the URI scheme changed from <code>di:</code> to <code>ni://{{ hostName|e }}/</code>. If you still use the <code>di:</code> scheme you have to update to the new scheme
+<strong>NOTE</strong>: the URI scheme changed from <code>di:</code> to <code>ni:///</code>. If you still use the <code>di:</code> scheme you have to update to the new scheme
     </p>
 
     <p>
