update text, spec

--- a/views/enrollPage.twig
+++ b/views/enrollPage.twig
@@ -17,7 +17,7 @@ Here you can generate a new client certificate to be able to use IndieCert.
 The following browsers and platforms were tested and are working:
     </p>
     <ul>
-        <li>Firefox<span class="sup">1</span> (Linux, Android)</li>
+        <li>Firefox (Linux, Android)</li>
         <li>Chromium (Linux)</li>
         <li>Chrome (Android)</li>
     </ul>
@@ -42,12 +42,6 @@ After the certificate is sucessfully installed you should be able to login to
 services supporting IndieCert!
 {% endif %}
     </p>
-
-    <div class="footnotes">
-        <span class="sup">1</span>
-        You may need to restart Firefox before it will pick up authenticating
-        with a client certificate after it was installed...
-    </div>
 
     <div class="footer">
         <a href="faq">FAQ</a> | IndieCert
