--- a/views/relyingPartyPage.twig
+++ b/views/relyingPartyPage.twig
@@ -17,6 +17,12 @@ Here you can read how to integrate your service as a <em>relying party</em>
 with IndieCert.
     </p>
 
+    <p class="info">
+A client implementation written in PHP supporting both IndieCert, IndieAuth and
+"Distributed IndieAuth" is available
+<a href="https://github.com/fkooman/php-lib-rest-plugin-indieauth">here</a>.
+    </p>
+
     <h3>Authentication Request</h3>
     <p>
 The relying party redirects the browser to <code>{{ authUri|e }}</code> to
