--- a/views/welcomePage.twig
+++ b/views/welcomePage.twig
@@ -11,7 +11,7 @@
     <div id="container">
     <a class="header" href="welcome"><h1>IndieCert</h1></a>
     <p class="warn">
-This is currently an <strong>EXPERIMENTAL</strong> service!
+This is an <strong>EXPERIMENTAL</strong> service. No warranty!
     </p>
 
     <p>
@@ -28,10 +28,7 @@ IndieCert aims to be compatible with the (distributed)
 <a href="https://indieauth.com">IndieAuth</a> protocol.
     </p>
     <p class="info">
-For more information you are kindly invited to look at the technical
-description in
-<a href="https://www.tuxed.net/fkooman/blog/indiecert.html">this</a> blog
-entry.
+You can check out the <a href="faq">Frequently Asked Questions</a>!
     </p>
     <p>
 All <a href="https://github.com/fkooman/indiecert">code</a> is available under
@@ -41,16 +38,12 @@ also Docker
 for easily running your own instance!
     </p>
 
-    <h2>Relying Party?</h2>
-    <p>
-Check out the relying party <a href="rp">instructions</a>!
-    </p>
-
     <h2>Try It!</h2>
     <p>
-Here you can try out IndieCert! You will be guided through generating a client
-certificate and adding the fingerprint to your home page! Please enter a domain
-name or URL to a page you can modify. It <strong>MUST</strong> be reachable over HTTPS!
+You will be guided through generating a client certificate if you don't already
+have one and adding the fingerprint to your home page. Please enter a domain
+name or URL to a page you can modify. It <strong>MUST</strong> be reachable
+over HTTPS!
     </p>
 
     <form method="post" action="indieauth/auth">
@@ -58,8 +51,9 @@ name or URL to a page you can modify. It <strong>MUST</strong> be reachable over
         <input type="submit" value="Sign In">
     </form>
 
+    <h2>Relying Party?</h2>
     <p>
-You can check the <a href="faq">Frequently Asked Questions</a>.
+Check out the relying party <a href="rp">instructions</a>!
     </p>
     
     <div class="footer">
