--- a/views/noCert.twig
+++ b/views/noCert.twig
@@ -12,21 +12,21 @@
     <a class="header" href="welcome"><h1>IndieCert</h1></a>
     <p class="warn">
 You reached this page because you do not yet have a client certificate
-installed in your browser/operating system that was issued by IndieCert or
-declined to authenticate with it to IndieCert.
+installed in your browser/operating system or declined to authenticate with it
+to IndieCert.
     </p>
 
     <p>
-If you want you can enroll <a href="enroll">here</a>! Follow the instructions
-provided there to get going. If you already have an IndieCert client
-certificate restart your browser<span class="sup">1</span> and try again!
+If you want you can generate a new client certificate <a href="enroll">here</a>!
+Follow the instructions provided there to get going. If you already have a
+client certificate restart your browser<span class="sup">1</span> and
+try again!
     </p>
 
     <div class="footnotes">
         <span class="sup">1</span>
-        unfortunately some browser will require you to restart, or use
-        'private mode' to forget that you did not want to authenticate to a
-        site using the client certificate...
+Some browser will require you to restart, or use "Private Browsing" to forget
+that you did not want to authenticate to a site using a client certificate...
     </div>
 
     <div class="footer">
