--- a/views/faqPage.twig
+++ b/views/faqPage.twig
@@ -100,7 +100,7 @@ string according to <a href="https://tools.ietf.org/html/rfc6920">RFC 6920</a>
     </p>
 <blockquote>
 <pre>
-&lt;link rel="me" href="ni://indiecert.net/sha-256;ThIaJ7TJQ1oAIKCGKe0BdBO3Bh8NzxZeyAa-WCTuzpU?ct=application/x-x509-user-cert"&gt;
+&lt;link rel="me" href="ni:///sha-256;ThIaJ7TJQ1oAIKCGKe0BdBO3Bh8NzxZeyAa-WCTuzpU?ct=application/x-x509-user-cert"&gt;
 </pre>
 </blockquote>
 
