--- a/views/faqPage.twig
+++ b/views/faqPage.twig
@@ -61,7 +61,7 @@ far as I know Safari on iOS does not support <code>&lt;keygen&gt;</code> at
 all, but I don't have an iDevice to test with, so it remains speculation.
     </p>
 
-    <h3>Can I specify an URL instead of a domain?</h3>
+    <h3>Can I specify a URL instead of a domain?</h3>
     <p>
 You can do both. The IndieCert service will follow your URL or domain by
 performing a HTTPS request, follow the redirects and determine the 'effective'
