--- a/views/faqPage.twig
+++ b/views/faqPage.twig
@@ -82,6 +82,19 @@ wait for <a href="https://letsencrypt.org/">Let’s Encrypt</a>. For now also
 the <a href="http://www.cacert.org">CAcert</a> CA is supported.
     </p>
 
+    <h3>Supported Services</h3>
+    <p>
+There is a "Distributed IndieAuth" client
+<a href="https://www.tuxed.net/distributed-indieauth-demo/">here</a>. It checks
+the <code>authorization_endpoint</code> on your home page and uses the
+service mentioned there. If it is not set
+<code>https://indiecert.net/auth</code> will be used.
+    </p>
+    <p>
+A list of sites that support "Distributed IndieAuth" can also be found on the
+<a href="https://indiewebcamp.com/distributed-indieauth#Sites_that_support_distributed_IndieAuth">IndieWebCamp</a> wiki.
+    </p>
+
     <h3>Fingerprints?</h3>
     <p>
 You need to place the fingerprint of the certificate that was installed in your
