FAQ and welcompage update

--- a/views/faqPage.twig
+++ b/views/faqPage.twig
@@ -84,7 +84,7 @@ the <a href="http://www.cacert.org">CAcert</a> CA is supported.
 
     <h3>Supported Services</h3>
     <p>
-There is a "Distributed IndieAuth" client
+There is a "Distributed IndieAuth" demo
 <a href="https://www.tuxed.net/distributed-indieauth-demo/">here</a>. It checks
 the <code>authorization_endpoint</code> on your home page and uses the
 service mentioned there. If it is not set
