--- a/views/welcomePage.twig
+++ b/views/welcomePage.twig
@@ -24,7 +24,8 @@ this by making it easier to deploy client certificates and support multiple
 (mobile) devices.
     </p>
     <p>
-IndieCert aims to be compatible with the (distributed)
+IndieCert aims to be compatible with the
+(<a href="https://indiewebcamp.com/distributed-indieauth">distributed</a>)
 <a href="https://indieauth.com">IndieAuth</a> protocol.
     </p>
     <p class="info">
