update FAQ and welcome texts

--- a/views/faqPage.twig
+++ b/views/faqPage.twig
@@ -71,6 +71,14 @@ follow any redirects. You can also specify a full URL, e.g.:
 <code>https://www.example.org/johndoe/</code>.
     </p>
 
+    <h3>Is this the end game?</h3>
+    <p>
+No. It is an intermediate step towards better browser authentication. See for
+example <a href="http://browserauth.net/">http://browserauth.net/</a> for more
+discussion on the topic. IndieCert (partly) solves some of the issues presented
+there.
+    </p>
+
     <h3>Do I need a HTTPS home page?</h3>
     <p>
 Yes. In order to be sure that your client certificate and your identity
