--- a/views/welcomePage.twig
+++ b/views/welcomePage.twig
@@ -15,13 +15,13 @@ This is an <strong>EXPERIMENTAL</strong> service. No warranty!
     </p>
 
     <p>
-IndieCert is a service to authenticate to services around the web without
-requiring usernames and passwords. IndieCert uses client certificates installed
-in the user's browser. Client certificates provide superior security. Until
-now it has been cumbersome to deploy client certificates outside managed
-corporate environments. This service improves on
-this by making it easier to deploy client certificates and support multiple
-(mobile) devices.
+IndieCert is a service to authenticate to services around the web using your
+home page URL as an identity without requiring a password! IndieCert uses
+client certificates installed in the user's browser. Client certificates
+provide superior security. Until now it has been cumbersome to deploy client
+certificates outside managed corporate environments. This service, or your
+instance of it, improves on this by making it easier to deploy client
+certificates and support multiple (mobile) devices.
     </p>
     <p>
 IndieCert aims to be compatible with the
