- update `fkooman/rest` - update `fkooman/rest-plugin-indieauth`

--- a/views/authenticatedPage.twig
+++ b/views/authenticatedPage.twig
@@ -16,7 +16,7 @@ You are now successfully authenticated as <strong>{{ me|e }}</strong>!
     </p>
 
     <p>
-    Take me <a href="welcome">back</a> to the homepage!
+    Log me <a href="indieauth/logout">out</a>!
     </p>
 
     <div class="footer">
