fix style of try box a little

--- a/views/welcomePage.twig
+++ b/views/welcomePage.twig
@@ -47,7 +47,7 @@ name or URL to a page you can modify. It <strong>MUST</strong> be reachable
 over HTTPS!
     </p>
 
-    <form method="post" action="indieauth/auth">
+    <form class="try" method="post" action="indieauth/auth">
         https://<input required type="text" name="me" placeholder="example.org">
         <input type="hidden" name="redirect_to" value="/success">
         <input type="submit" value="Sign In">
